--- a/build.gradle
+++ b/build.gradle
@@ -114,7 +114,7 @@ tasks.withType(JavaCompile) {
 spotless {
     //ratchetFrom 'origin/main'
 
-    //enforceCheck true
+    enforceCheck false
 
     java {
         target fileTree('.') {
